# gemini-tts-tool

./: .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
gemini_tts_tool/: __init__.py  cli.py  utils.py
gemini_tts_tool/commands/: __init__.py  list_commands.py  multi_voice_command.py  synthesize_command.py
gemini_tts_tool/core/: __init__.py  client.py  synthesizer.py  voices.py
references/: advanced-multi-voice-guide.md  api-setup-pricing.md  google-cloud-tts-api-overview.md  model-features.md  prompting-guide.md  quick-reference-templates.md  token-and-text-limits.md  voice-and-style-guide.md
tests/: __init__.py  test_client.py  test_commands.py  test_synthesizer.py  test_utils.py  test_voices.py
